# hgis-poland-natural-disasters

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
tests/pth_disasters/: test_smoke.py
