[project]
authors = [{name = "Archont561", email = "esrebrny@tuta.io"}]
dependencies = []
name = "pth_disasters"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pth_disasters = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.utils.dependencies]
lefthook = "*"

[tool.pixi.feature.test.dependencies]

[tool.pixi.feature.lint.dependencies]

[tool.pixi.environments]
dev = { features = ["test",  "lint", "utils"], solve-group = "default" }
ci = { features = ["test",  "lint"], solve-group = "default" }
